2005-02-08  Michael Natterer  <mitch@gimp.org>

	* HACKING: updated info about stable CVS branches of modules we
	depend on.

2005-02-08  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpuimanager.[ch]: removed gimp_ui_manager_ui_get()
	and implement the new virtual functions GtkUIManager::get_widget()
	and ::get_action() instead. Menu loading happens transparently now.

	* app/display/gimpdisplayshell.c
	* app/widgets/gimpdockable.c
	* app/widgets/gimptexteditor.c
	* app/widgets/gimptoolbox.c
	* app/widgets/gimptooloptionseditor.c: use
	gtk_ui_manager_get_widget() instead of the removed
	gimp_ui_manager_ui_get().

2005-02-08  Sven Neumann  <sven@gimp.org>

	Applied a patch from Patrice Tremblay that makes (almost) all
	dialogs obey the "gtk-alternative-button-order" setting
	(bug #166678). Changes too many files to list them all...

2005-02-08  Sven Neumann  <sven@gimp.org>

	* tools/gimp-remote.c: add the gtk+ options to the GOptionContext.

2005-02-08  Sven Neumann  <sven@gimp.org>

	* INSTALL: updated.

2005-02-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpgradienteditor.c (gimp_gradient_editor_init):
	use "single-line-mode" for the hint labels. Should fix bug #157570.

2005-02-08  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpwidgets-constructors.[ch]: undeprecated the
	paint mode menu (ported to GimpEnumComboBox with separators).
	The separator code is quite hackish and therefore still
	implemented privately here.

	* app/widgets/gimpbrushselect.c
	* app/widgets/gimplayertreeview.c
	* app/widgets/gimppropwidgets.c: changed accordingly.

2005-02-08  Michael Natterer  <mitch@gimp.org>

	* configure.in: depend on GTK+ >= 2.6.0 and pango >= 1.8.0.

	* app/gui/gui.c (gui_sanity_check): changed accordingly.

2005-02-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icosave.c: minor cleanup.

2005-02-08  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/plug-ins/Makefile.am: install sphere.py in unstable
	releases only.
