@@ -1,5 +1,12 @@
 2005-02-08  Michael Natterer  <mitch@gimp.org>
 
+	* app/actions/actions.c (action_data_get_widget): return the
+	active display's shell instead of the toolbox when called from the
+	<Image> popup. Fall back to the toolbox if there is no active
+	display. Fixes bug #166012.
+
+2005-02-08  Michael Natterer  <mitch@gimp.org>
+
 	* HACKING: updated info about stable CVS branches of modules we
 	depend on.
 
